# pr2_moveit_dev

./: README.md  area_init.sh
pr2_description/: CMakeLists.txt  package.xml  setup.py
pr2_description/config/: controllers_mod.yaml
pr2_description/demos/: pr2_movit_demo.py
pr2_description/include/pr2_description/: pr2_motion.h  pr2_pick_place_server.h
pr2_description/launch/: pick_place_demo.launch  pick_place_perception.launch  pick_place_project.launch  pick_place_project_mod.launch  put_robot_in_world.launch  robot_control.launch  robot_control_mod.launch  robot_description.launch  robot_description_mod.launch  robot_simulation_test.launch  robot_spawn.launch  robot_spawn_mod.launch  start_world.launch  world.launch
pr2_description/scripts/: grasp_server.py  marker_generation.py  pr2_perception_spawner.sh  pr2_safe_spawner.sh
pr2_description/src/: feature_extractor.cpp  pr2_motion.cpp  pr2_pick_place_client.cpp  pr2_pick_place_server.cpp  pr2_segmentation.cpp
pr2_description/urdf/: pr2.urdf.xacro  pr2_mod.urdf.xacro  sensor.urdf.xacro  sensor_mod.urdf.xacro
pr2_description/urdf/head_v0/: head.gazebo.xacro  head.transmission.xacro  head.urdf.xacro
pr2_description/urdf/sensors/: hokuyo_lx30_laser.gazebo.xacro  hokuyo_lx30_laser.urdf.xacro
pr2_description/urdf/tilting_laser_v0/: tilting_laser.gazebo.xacro  tilting_laser.transmission.xacro  tilting_laser.urdf.xacro
pr2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
pr2_moveit/action/: move.action  pick.action  place.action
pr2_moveit/config/: controllers.yaml  controllers_sim.yaml  joint_limits.yaml
pr2_moveit/include/pr2_manip/: pr2_manip.h
pr2_moveit/include/pr2_rs_test/: pr2_rs_test.h
pr2_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr2_moveit.launch  pr2_moveit_controller_manager.launch.xml  pr2_moveit_sensor_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pr2_moveit/src/: pickClient.cpp  pr2_manip.cpp  pr2_rs_test.cpp
pr2_moveit/urdf/: robot_calibrated_2019_11_19_16_58.xml
pr2_moveit_newurdf/: .setup_assistant  CMakeLists.txt  package.xml
pr2_moveit_newurdf/config/: config_moveit_rs.rviz  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pr2.srdf  ros_controllers.yaml  sensors_kinect_depthmap.yaml
pr2_moveit_newurdf/include/pr2_rs_test/: pr2_rs_test.h
pr2_moveit_newurdf/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr2_moveit.launch  pr2_moveit_controller_manager.launch.xml  pr2_moveit_sensor_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pr2_moveit_newurdf/src/: pr2_rs_test.cpp
pr2_moveit_plugins/: CMakeLists.txt  package.xml
pr2_moveit_plugins/pr2_moveit_controller_manager/src/: pr2_moveit_controller_manager.cpp
pr2_pickplace/: CMakeLists.txt  package.xml  setup.py
pr2_pickplace/demos/: pr2_movit_demo.py  pr2_movit_demo_client.py
pr2_pickplace/include/pr2_pickplace/: pr2_motion.h  pr2_pick_place_server.h
pr2_pickplace/launch/: pick_place_demo.launch  pick_place_perception.launch  pick_place_project.launch  pick_place_project_mod.launch  put_robot_in_world.launch  robot_control.launch  robot_control_mod.launch  robot_description.launch  robot_description_mod.launch  robot_simulation_test.launch  robot_spawn.launch  robot_spawn_mod.launch  start_world.launch  world.launch
pr2_pickplace/scripts/: grasp_server.py  marker_generation.py  pr2_perception_spawner.sh  pr2_safe_spawner.sh
pr2_pickplace/src/: feature_extractor.cpp  pr2_motion.cpp  pr2_pick_place_client.cpp  pr2_pick_place_server.cpp  pr2_segmentation.cpp
pr2_pickplace/srv/: Pr2Move.srv
pr2_pickplace/urdf/: pr2.urdf.xacro  pr2_mod.urdf.xacro  sensor.urdf.xacro  sensor_mod.urdf.xacro
